Please view this file on the master branch, on stable branches it's out of date.

v 8.10.0 (unreleased)
  - Fix profile activity heatmap to show correct day name (eanplatter)
  - Expose {should,force}_remove_source_branch (Ben Boeckel)
  - Disable PostgreSQL statement timeout during migrations
  - Fix projects dropdown loading performance with a simplified api cal. !5113 (tiagonbotelho)
  - Fix commit builds API, return all builds for all pipelines for given commit. !4849
  - Replace Haml with Hamlit to make view rendering faster. !3666
  - Refresh the branch cache after `git gc` runs
  - Refactor repository paths handling to allow multiple git mount points
  - Optimize system note visibility checking by memoizing the visible reference count !5070
  - Add Application Setting to configure default Repository Path for new projects
  - Delete award emoji when deleting a user
  - Remove pinTo from Flash and make inline flash messages look nicer !4854 (winniehell)
  - Wrap code blocks on Activies and Todos page. !4783 (winniehell)
  - Align flash messages with left side of page content !4959 (winniehell)
  - Display tooltip for "Copy to Clipboard" button !5164 (winniehell)
  - Use default cursor for table header of project files !5165 (winniehell)
  - Store when and yaml variables in builds table
  - Display last commit of deleted branch in push events !4699 (winniehell)
  - Escape file extension when parsing search results !5141 (winniehell)
  - Apply the trusted_proxies config to the rack request object for use with rack_attack
  - Upgrade to Rails 4.2.7. !5236
  - Allow to pull code with deploy key from public projects
  - Add Sidekiq queue duration to transaction metrics.
  - Add a new column `artifacts_size` to table `ci_builds` !4964
  - Let Workhorse serve format-patch diffs
  - Display tooltip for mentioned users and groups !5261 (winniehell)
  - Allow build email service to be tested
  - Added day name to contribution calendar tooltips